--- a/Express_JS/Download_express_server/public/download.html
+++ b/Express_JS/Download_express_server/public/download.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Download File</h1>
+    <a href="/download">Download Here</a>
 </body>
 </html>
